# cubicle

./: .gitignore  .shellcheckrc  Cargo.toml  Dockerfile.in  README.md  _cub  _dev  clippy.toml  cubicle.py  dev  dev-init.sh  dev.py  firefox-update.sh  mold-update.sh  mypy.ini  node-update.sh  shellcheck.sh  test_cubicle.py  test_dev.py  vscodium-update.sh
.github/workflows/: main.yaml
docs/: Bubblewrap.md  Docker.md  Packages.md  User.md
src/: apt.rs  bubblewrap.rs  bytes.rs  cli.rs  command_ext.rs  config.rs  docker.rs  encoding.rs  env-init.sh  fs_util.rs  lib.rs  main.rs  newtype.rs  os_util.rs  packages.rs  paths.rs  randname.rs  runner.rs  scoped_child.rs  somehow.rs  user.rs
src/docker/: names.rs
src/snapshots/: cub__cli__tests__usage_completions.snap  cub__cli__tests__usage_cub.snap  cub__cli__tests__usage_enter.snap  cub__cli__tests__usage_exec.snap  cub__cli__tests__usage_list.snap  cub__cli__tests__usage_new.snap  cub__cli__tests__usage_package list.snap  cub__cli__tests__usage_package update.snap  cub__cli__tests__usage_package.snap  cub__cli__tests__usage_purge.snap  cub__cli__tests__usage_reset.snap  cub__cli__tests__usage_tmp.snap  cub__cli__tests__write_completions_bash.snap  cub__cli__tests__write_completions_zsh.snap  cubicle__cli__tests__usage_completions.snap  cubicle__cli__tests__usage_cub.snap  cubicle__cli__tests__usage_enter.snap  cubicle__cli__tests__usage_exec.snap  cubicle__cli__tests__usage_new.snap  cubicle__cli__tests__usage_package list.snap  cubicle__cli__tests__usage_package update.snap  cubicle__cli__tests__usage_package.snap  cubicle__cli__tests__usage_packages.snap  cubicle__cli__tests__usage_purge.snap  cubicle__cli__tests__usage_reset.snap  cubicle__cli__tests__usage_tmp.snap  cubicle__cli__tests__write_completions_bash.snap  cubicle__cli__tests__write_completions_zsh.snap  cubicle__docker__tests__Dockerfile.snap
tests/: file_header.rs
