[package]
name = "cubicle"
version = "0.0.0"

categories = ["command-line-utilities", "virtualization"]
description = "Manage isolated development environments"
keywords = ["cli", "container", "dev-environment", "docker", "sandbox"]
license = "MIT"
repository = "https://github.com/ongardie/cubicle"

default-run = "cub"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cub"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
cap-std = "3.4.2"
clap = { version = "4.5.31", features = ["derive", "wrap_help"] }
clap_complete = "4.5.46"
indoc = "2.0.6"
# this is a dev-dependency but needed in `system_test` bin
expect-test = "1.5.1"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
rustix = { version = "0.38.44", features = ["fs", "process"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
shlex = "1.3.0"
tar = "0.4.44"
tempfile = "3.17.1"
toml = "0.8.20"
wildmatch = "2.4.0"

[dev-dependencies]

[lints.clippy]
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
redundant_else = "warn"
try_err = "warn"
unreadable_literal = "warn"
